<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activity.ProblemEditAdd"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/problemTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/problemTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/problemTitle"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/signup_border"
        android:ems="10"
        android:hint="@string/problemTitle"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/dateText"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/problemDate"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/signup_border"
        android:ems="10"
        android:hint="@string/problemDate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/descText"
        app:layout_constraintEnd_toEndOf="@+id/problemDesc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/descText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/problemDate"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/problemDate"
        app:layout_constraintEnd_toEndOf="@+id/titleText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/problemDate" />

    <EditText
        android:id="@+id/problemDesc"
        android:layout_width="304dp"
        android:layout_height="172dp"
        android:layout_marginBottom="92dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/signup_border"
        android:ems="10"
        android:hint="@string/problemDesc"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/problemDesc"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/problemDesc"
        app:layout_constraintEnd_toEndOf="@+id/cancelBtn"
        app:layout_constraintStart_toStartOf="@+id/problemDesc" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="51dp"
        android:text="@string/cancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="85dp"
        android:text="@string/saveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>