<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="188dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="189dp">

            <ImageView
                android:id="@+id/deleteImg"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/recordImg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.951"
                app:srcCompat="@drawable/delete" />

            <TextView
                android:id="@+id/titleView"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginEnd="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/signup_border"
                android:text="@string/recTitle"
                android:textSize="25dp"
                app:layout_constraintEnd_toStartOf="@+id/recordImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recordDate"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="54dp"
                android:layout_marginStart="45dp"
                android:text="@string/recDate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteImg"
                app:layout_constraintStart_toEndOf="@+id/recordBL" />

            <TextView
                android:id="@+id/userIdView"
                android:layout_width="0dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/user_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleView" />

            <TextView
                android:id="@+id/recordDesc"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/signup_border"
                android:text="@string/problemDesc"
                app:layout_constraintEnd_toStartOf="@+id/recordImg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleView" />

            <TextView
                android:id="@+id/recordBL"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/recLoc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/recordDate"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/recordImg"
                android:layout_width="76dp"
                android:layout_height="74dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="17dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/deleteImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/userIdView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/text_border" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>