<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="139dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="138dp">

            <TextView
                android:id="@+id/titleView"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/recTitle"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userIdView"
                android:layout_width="0dp"
                android:layout_height="23dp"
                android:layout_marginEnd="186dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/user_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleView" />

            <TextView
                android:id="@+id/descView"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/problemDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleView" />

            <ImageView
                android:id="@+id/editImg"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="89dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/editpencil" />

            <ImageView
                android:id="@+id/deleteImg"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="89dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editImg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/delete" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>